force-app/main/default/objects/How_To__kav/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>