force-app/main/default/objects/How_To__kav/fields/Related_Articles__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles__c</fullName>
    <label>Related Articles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>