force-app/main/default/objects/How_To__kav/fields/Related_Links__c.field-meta.xml
<CustomField>
    <fullName>Related_Links__c</fullName>
    <label>Related Links</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>