force-app/main/default/objects/How_To__kav/fields/Step_By_Step__c.field-meta.xml
<CustomField>
    <fullName>Step_By_Step__c</fullName>
    <label>Step By Step</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>